Bug 409138 - "Open recent" is missing
Summary: "Open recent" is missing
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: general (other bugs)
Version First Reported In: 19.04
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Cantor Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-24 14:44 UTC by avlas
Modified: 2019-06-27 10:26 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description avlas 2019-06-24 14:44:43 UTC
It would be great to have a list for easy access to recent cantor worksheets, both in the File menu as well as an icon in the toolbar.
Comment 1 Nikita Sirgienko 2019-06-26 22:07:21 UTC
Git commit ef30d6680493133aca10fa5839347af266ab3452 by Nikita Sirgienko.
Committed on 26/06/2019 at 22:06.
Pushed by sirgienko into branch 'master'.

[Feature] Add "Recent Files" submenu
FIXED-IN: 19.08

M  +19   -0    src/cantor.cpp
M  +6    -6    src/cantor.h
M  +4    -1    src/cantor_part.cpp
M  +1    -0    src/cantor_part.h
M  +2    -1    src/cantor_shell.rc

https://commits.kde.org/cantor/ef30d6680493133aca10fa5839347af266ab3452
Comment 2 Nikita Sirgienko 2019-06-26 22:10:19 UTC
I haven't maked icon in the toolbar, because I think, that this is function won't be used a lot, so only File menu.
Comment 3 avlas 2019-06-27 10:26:27 UTC
(In reply to Nikita Sirgienko from comment #2)
> I haven't maked icon in the toolbar, because I think, that this is function
> won't be used a lot, so only File menu.

Thank you!

Actually, the icon option is there as well, only not by default. One can edit the toolbar and add it :)