[Feature] Add "Recent Files" submenu

BUG: 409138
FIXED-IN: 19.08